# news_scarping

./: .gitignore  main.py  pyproject.toml
backend/: agent.py  constants.py  data_models.py  scraper.py  tts.py
